--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Uma Igreja calvinista que busca ter caráter cristão autêntico, disposta a
-  estender seu amor a todos que se achegam a ela.">
+  <meta name="description"
+    content="Uma Igreja calvinista que busca ter caráter cristão autêntico, disposta a estender seu amor a todos que se achegam a ela.">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.webp">
   <title>IPB - Veranopólis</title>
   <link rel="stylesheet" href="./assets/styles/pages-home.css" defer>
   <link rel="stylesheet" href="./assets/styles/styles.css" defer>
@@ -29,9 +30,9 @@
 
 <body class="page">
 
-  <div style="height: 33px;"></div>
+  <div class="d-none d-lg-block" style="height: 33px;"></div>
 
-  <div class="header__mast border-bottom fixed-top">
+  <div class="header__mast border-bottom fixed-top d-none d-lg-block">
     <div class="container">
       <p class="text-center py-1 m-0">Nossa programacao: Domingos às 19hs • Quinta-feira às 20hs</p>
     </div>
@@ -91,7 +92,7 @@
           </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5" id="nosso-compromisso">
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 pb-0 mb-0 py-lg-5" id="nosso-compromisso">
 
           <div class="col">
             <div class="card card-cover card-hover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
@@ -225,7 +226,7 @@
       </div>
     </section>
 
-    <section class="page__main__section" id="lideranca">
+    <section class="page__main__section p-0 m-0" id="lideranca">
       <div class="container" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
         <h2 class="fw-bold text-center display-5">Lideranca</h2>
         <p class="d-lg-none text-center mb-5 mx-auto text-dark-emphasis lead">
@@ -237,17 +238,17 @@
           atendem a comunidade, o culto e as pessoas que necessitam de alguma ajuda.
         </p>
         <div class="row">
-          <div class="col text-center" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
+          <div class="col-12 col-lg-4 text-center" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
             <img class="rounded-3 shadow-lg" src="./assets/images/home-pastor.jpg" alt="" style="width: 95px;">
             <h4 class="fw-semibold mb-1 mt-3">Pr. Daniel Alves</h4>
             <p class="text-muted">Pastor Titular</p>
           </div>
-          <div class="col text-center" data-aos="fade-up" data-aos-delay="650" data-aos-duration="1500">
+          <div class="col-12 col-lg-4 text-center" data-aos="fade-up" data-aos-delay="650" data-aos-duration="1500">
             <img class="rounded-3 shadow-lg" src="./assets/images/home-pastor.jpg" alt="" style="width: 95px;">
             <h4 class="fw-semibold mb-1 mt-3">Pr. Diego</h4>
             <p class="text-muted">Pastor Substituto</p>
           </div>
-          <div class="col text-center" data-aos="fade-up" data-aos-delay="850" data-aos-duration="1500">
+          <div class="col-12 col-lg-4 text-center" data-aos="fade-up" data-aos-delay="850" data-aos-duration="1500">
             <img class="rounded-3 shadow-lg" src="./assets/images/home-pastor.jpg" alt="" style="width: 95px;">
             <h4 class="fw-semibold mb-1 mt-3">Bes. Everton</h4>
             <p class="text-muted">Auxiliar</p>
@@ -334,58 +335,59 @@
       </div>
     </section>
 
-    <footer class="border-top">
-      <div class="container">
-        <footer class="py-5">
-          <div class="row">
+  </main>
 
-            <div class="col-6 col-md-4 mb-3">
-              <img style="width: 200px;" class="img-fluid" src="./assets/images/logo-dark.png"
-                alt="Igreja Presbiteriana do Brasil - Veranopolis / RS">
-            </div>
+  <footer class="border-top">
+    <div class="container">
+      <footer class="py-5">
+        <div class="row">
 
-            <div class="col-6 col-md-4 mb-3">
-              <ul class="nav flex-column text-center">
-                <li class="nav-item mb-2"><a href="#quem-somos" class="nav-link p-0 text-muted">Quem somos</a></li>
-                <li class="nav-item mb-2"><a href="#lideranca" class="nav-link p-0 text-muted">Liderança</a></li>
-                <li class="nav-item mb-2"><a href="#endereco" class="nav-link p-0 text-muted">Endereço</a></li>
-              </ul>
-            </div>
-
-            <div class="col-12 col-md-4 mb-3">
-              <blockquote class="blockquote">
-                <p class="text-end">"...a Igreja do Deus vivo, a coluna e firmeza da verdade."</p>
-                <p class="fw-bold text-end">1 Timóteo 3: 15</p>
-              </blockquote>
-            </div>
-
+          <div class="col-6 col-md-4 mb-3 d-none d-lg-block">
+            <img style="width: 200px;" class="img-fluid" src="./assets/images/logo-dark.png"
+              alt="Igreja Presbiteriana do Brasil - Veranopolis / RS">
           </div>
 
-          <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-            <p>© 2023 IPB Veranopólis</p>
-            <ul class="list-unstyled d-flex">
-              <li class="ms-5">
-                <a class="link-dark" href="https://www.youtube.com/@ipbveranopolis" target="_blank">
-                  <img style="width: 35px;" src="./assets/images/youtube.png" alt="youtube">
-                </a>
-              </li>
-              <li class="ms-5">
-                <a class="link-dark" href="https://www.instagram.com/ipbveranopolis/?hl=en" target="_blank">
-                  <img style="width: 35px;" src="./assets/images/instagram.png" alt="instagram">
-                </a>
-              </li>
-              <li class="ms-5">
-                <a class="link-dark" href="mailto:ipbveranopolis@gmail.com?subject=Contato [Website]">
-                  <img style="width: 35px;" src="./assets/images/gmail.png" alt="gmail">
-                </a>
-              </li>
+          <div class="col-12 col-md-4 mb-3">
+            <ul class="nav flex-column text-center">
+              <li class="nav-item mb-2"><a href="#quem-somos" class="nav-link p-0 text-muted">Quem somos</a></li>
+              <li class="nav-item mb-2"><a href="#lideranca" class="nav-link p-0 text-muted">Liderança</a></li>
+              <li class="nav-item mb-2"><a href="#endereco" class="nav-link p-0 text-muted">Endereço</a></li>
             </ul>
           </div>
-        </footer>
-      </div>
-    </footer>
 
-  </main>
+          <div class="col-12 col-md-4 mb-3">
+            <blockquote class="blockquote">
+              <p class="text-center text-lg-end">"...a Igreja do Deus vivo, a coluna e firmeza da verdade."</p>
+              <p class="fw-bold text-center text-lg-end">1 Timóteo 3: 15</p>
+            </blockquote>
+          </div>
+
+        </div>
+
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+          <p class="d-none d-lg-block">© 2023 IPB Veranopólis</p>
+          <ul class="list-unstyled d-flex justify-content-center">
+            <li class="ms-lg-5">
+              <a class="link-dark" href="https://www.youtube.com/@ipbveranopolis" target="_blank">
+                <img style="width: 35px;" src="./assets/images/youtube.png" alt="youtube">
+              </a>
+            </li>
+            <li class="ms-5 me-5 me-lg-0 ms-lg-5">
+              <a class="link-dark" href="https://www.instagram.com/ipbveranopolis/?hl=en" target="_blank">
+                <img style="width: 35px;" src="./assets/images/instagram.png" alt="instagram">
+              </a>
+            </li>
+            <li class="ms-lg-5">
+              <a class="link-dark" href="mailto:ipbveranopolis@gmail.com?subject=Contato [Website]">
+                <img style="width: 35px;" src="./assets/images/gmail.png" alt="gmail">
+              </a>
+            </li>
+          </ul>
+          <p class="d-lg-none text-center">© 2023 IPB Veranopólis</p>
+        </div>
+      </footer>
+    </div>
+  </footer>
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
